[package]
name = "ratatui-activity-graph"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
ratatui = { version = "0.29.0", default-features = false }

[dev-dependencies]
rstest = "0.25.0"
chrono = { version = "0.4.40", features = ["serde"]}
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
ratatui = "0.29.0"
